; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4filelayout.c_filelayout_commit_prepare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4filelayout.c_filelayout_commit_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_task = type { i32 }
%struct.nfs_commit_data = type { %struct.TYPE_6__, %struct.TYPE_5__, %struct.TYPE_4__* }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpc_task*, i8*)* @filelayout_commit_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filelayout_commit_prepare(%struct.rpc_task* %0, i8* %1) #0 {
  %3 = alloca %struct.rpc_task*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.nfs_commit_data*, align 8
  store %struct.rpc_task* %0, %struct.rpc_task** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.nfs_commit_data*
  store %struct.nfs_commit_data* %7, %struct.nfs_commit_data** %5, align 8
  %8 = load %struct.nfs_commit_data*, %struct.nfs_commit_data** %5, align 8
  %9 = getelementptr inbounds %struct.nfs_commit_data, %struct.nfs_commit_data* %8, i32 0, i32 2
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.nfs_commit_data*, %struct.nfs_commit_data** %5, align 8
  %14 = getelementptr inbounds %struct.nfs_commit_data, %struct.nfs_commit_data* %13, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.nfs_commit_data*, %struct.nfs_commit_data** %5, align 8
  %17 = getelementptr inbounds %struct.nfs_commit_data, %struct.nfs_commit_data* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = load %struct.rpc_task*, %struct.rpc_task** %3, align 8
  %20 = call i64 @nfs41_setup_sequence(i32 %12, i32* %15, i32* %18, %struct.rpc_task* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %2
  br label %26

23:                                               ; preds = %2
  %24 = load %struct.rpc_task*, %struct.rpc_task** %3, align 8
  %25 = call i32 @rpc_call_start(%struct.rpc_task* %24)
  br label %26

26:                                               ; preds = %23, %22
  ret void
}

declare dso_local i64 @nfs41_setup_sequence(i32, i32*, i32*, %struct.rpc_task*) #1

declare dso_local i32 @rpc_call_start(%struct.rpc_task*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
